--- a/app/assets/stylesheets/layouts/navbar.scss
+++ b/app/assets/stylesheets/layouts/navbar.scss
@@ -1,4 +1,5 @@
 .navbar {
+  height: 64px;
   position: fixed;
   top: 0px;
   width: 100%;
